Bug 1197097 - Don't use a context-wide cycle-detection mechanism for detecting cycles during JSON.stringify.  This prevents nested (yet separate) JSON.stringify, and it causes that algorithm to be affected by specification-unrelated operations like toSource.  r=jonco